src/test/resources/tokens/invalid/identifier_starts_with_number.unpick
unpick v3
const int 0a